--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,38 +1,83 @@
 body {
-  padding: 50px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: beige !important;
+  /* background-color: beige !important; */
 
+}
+#navbar {
+  color: #D4F7D4
 }
 .parallax {
   background-image: url(../images/StMarkBldg.jpg);
+  
   height: 500px;
+  background-attachment: fixed;
+  background-position: center; 
+  background-repeat: no-repeat;
   background-size: cover;
+  text-align: center;
+  color: #ffffff;
+  /* position:absolute; */
+  /* top:0;
+  bottom:0;
+  right:0;
+  left:0; */
+
+
+}
+.containParallax{
+ 
+  background: rgba(0, 0, 0, 0.25);
+  position: relative;
+  overflow: hidden;
+  min-height: 50vh;
+}
+.video-bg {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+#intro {
+  background-color:#D9E5F2;
+  height: 500px;
+  /* background-size: cover; */
   background-repeat: no-repeat;
   background-position: center; 
-  background-attachment: fixed;
+  background-attachment: local;
   text-align: center;
-  /* position:absolute;
-  top:0;
+  color: #2E1017;
+  position: relative;
+  overflow: hidden;
+  /* top:0;
   bottom:0;
   right:0;
   left:0; */
 }
-#intro {
-  background-color: plum;
-  height: 500px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; 
-  background-attachment: fixed;
-  text-align: center;
-  color: white;
-  /* position:absolute;
-  top:0;
-  bottom:0;
-  right:0;
-  left:0; */
+.intro-pic{
+  float: left;
+  margin-left: 15px;
+  box-shadow:  10px 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
 }
 a {
   color: #00B7FF;
+}
+#location {
+  background-color: #396AA2;
+  height: 500px;
+  /* background-size: cover; */
+  background-repeat: no-repeat;
+  background-position: center; 
+  background-attachment: local;
+  text-align: center;
+  color: #2E1017;
+  position: relative;
+  overflow: hidden;
+  /* top:0;
+  bottom:0;
+  right:0;
+  left:0; */
 }
