--- a/views/index.pug
+++ b/views/index.pug
@@ -2,11 +2,47 @@ extends layout
 
 
 block content
+  nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
+    a.navbar-brand(href='https://www.ucc.org/' target="_blank")
+      img(src="https://d3n8a8pro7vhmx.cloudfront.net/unitedchurchofchrist/pages/52/attachments/original/1540995080/UCC-Logo-2018-uccwebheader.png?1540995080" style='width: 300px' alt="United Church of Christ")
+    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
+      span.navbar-toggler-icon
+    #navbarNav.collapse.navbar-collapse
+      ul.navbar-nav
+        li.nav-item.active
+          a.nav-link(href='#')
+            | About Us 
+            span.sr-only (current)
+        li.nav-item
+          a.nav-link(href='#') Events
+        li.nav-item
+          a.nav-link(href='#') Gallery
+        //- li.nav-item
+        //-   a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
   .parallax
-    h1= title
-    p Welcome to #{title}
+    div.containParallax
+      h1= title
+      h5 Welcome to #{title}
+      video.video-bg(autoplay='' muted='' loop='')
+        source(src='https://media.giphy.com/media/QmDiNBWHiPJSeae5Zo/giphy.mp4' type='video/mp4')
 
   #intro
-    h2 Who We Are
-    p We are a place for people who want to grow.  We are a place for those who believe in the power of community.
-    p Come join us as we study the word of God and honor Him in praise and worship.
+    br
+    h2 Join Us
+    h5 No Matter Who You Are Or Where You Are On Life's Journey, You're Welcome HERE!!!
+    img.intro-pic(src="/images/smiling_group.jpg")
+    p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque efficitur feugiat aliquet. Praesent accumsan enim sit amet nisi pellentesque, id placerat massa feugiat. Suspendisse condimentum felis ut metus consequat, at vulputate quam faucibus. Nulla eleifend convallis eros nec varius. Curabitur porta nulla dui, a hendrerit mi tincidunt quis. Duis euismod neque neque. Curabitur tempor nunc eget fermentum viverra. Donec et molestie mi, in suscipit nulla. Nulla maximus eu eros at tempor. Vestibulum tristique orci et ex ullamcorper, ac lobortis est commodo. Etiam tincidunt auctor ex sed rhoncus.Etiam posuere eu quam ac consectetur. Vivamus ut consequat nisi, in venenatis justo. Etiam vulputate rutrum hendrerit. Nullam efficitur porta mauris sit amet cursus. Nunc vestibulum varius dignissim. Fusce fringilla porta est, vel suscipit risus molestie ac. Suspendisse a augue eget ipsum auctor sodales quis sed orci. Curabitur purus sem, pretium eget nisl eu, lobortis lacinia ex. Suspendisse facilisis risus sit amet tempor viverra. Maecenas tincidunt semper suscipit. Nullam vestibulum non tortor ut consequat. Duis eu commodo diam. Donec maximus quis lacus et semper. Donec nisi lacus, placerat ut porta quis, dapibus ac nulla. Donec ornare diam sed nisl porttitor, ac convallis arcu tempor. Nunc eget nibh velit.
+
+    In volutpat, quam at mollis ultricies, diam nisi rhoncus nibh, ultricies venenatis justo magna et diam. Aliquam erat volutpat. Fusce ullamcorper dictum risus, pretium facilisis metus viverra in. Pellentesque ullamcorper turpis at libero dignissim, placerat vulputate metus pellentesque. Proin mattis, arcu et euismod semper, est nulla suscipit urna, tempor tristique felis tellus eget leo. Aliquam ornare dolor enim. Fusce at tellus efficitur, pretium turpis quis, pulvinar mi. Sed sollicitudin, nulla sit amet laoreet luctus, eros odio congue ligula, et venenatis lacus velit sit amet nulla. Duis sed enim enim. Nunc ante est, egestas at dolor a, faucibus eleifend ligula. Morbi efficitur leo dolor, at sollicitudin eros laoreet quis. Mauris a consequat leo. Sed commodo turpis eu massa gravida, lobortis vulputate purus congue. Mauris et pharetra lacus. Suspendisse quis porttitor eros, eget venenatis erat. Aenean elementum nunc purus, a cursus dolor hendrerit lobortis.
+
+    Fusce at dui nunc. Etiam sollicitudin augue ac mi pretium, non euismod erat facilisis. Suspendisse lectus erat, tempus eget ligula at, tempus consectetur justo. Sed congue, mi quis tempor interdum, risus elit pulvinar odio, lacinia condimentum leo libero sit amet mauris. Suspendisse vel auctor metus, sed venenatis turpis. Aliquam posuere vel metus vel aliquet. Nam molestie nisl vel quam tempor, ut malesuada tortor scelerisque. Praesent quis pellentesque eros. Vestibulum est tellus, eleifend et eros dapibus, varius maximus eros. Nunc ut ex finibus, tempus nisi ac, vulputate diam. Praesent fermentum, lorem non malesuada condimentum, quam ligula tristique mi, sed euismod tortor eros in sapien. Etiam faucibus volutpat justo, eu efficitur ante elementum at.
+
+
+    
+  #location
+    br
+    h2 Location
+    p 521 Obendorfer Rd Norfolk, VA
+    p Call (757) 545-5527
+    img(src="https://www.mapdevelopers.com/geocode_tool.php?lat=36.8293311&lng=-76.2692443")
+    a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX") Facebook
