changed form input fields to date and time types.

--- a/views/eventForm.pug
+++ b/views/eventForm.pug
@@ -13,13 +13,13 @@ block content
           input#title.form-control(type='text', placeholder='title' name='title')
         div.form-group
           label(for='date') Date:
-          input#date.form-control(type='text', placeholder='date' name='date')
+          input#date.form-control(type='date', placeholder='date' name='date')
         div.form-group
           label(for='start') Start Time:
-          input#start.form-control(type='text', placeholder='starting time' name='start')
+          input#start.form-control(type='time', placeholder='HH:MM' name='start')
         div.form-group
           label(for='end') End Time:
-          input#end.form-control(type='ending time' name='end')
+          input#end.form-control(type='time' placeholder="HH:MM" name='end')
         div.form-group
           label(for='description') Description:
           input#description.form-control(type='text' name='description')
