Added root link navbar

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -6,9 +6,11 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav
       li.nav-item.active
-        a.nav-link(href='#')
-          | About Us 
+        a.nav-link(href='/')
+          | Home
           span.sr-only (current)
+      li.nav-item
+        a.nav-link(href='#') About Us
       li.nav-item
         a.nav-link(href='/events') Events
       li.nav-item
