Added event delete and image upload functions.

--- a/views/eventForm.pug
+++ b/views/eventForm.pug
@@ -47,4 +47,4 @@ block content
               td
                 button#edit.btn.btn-outline-primary(type="#" value= (event.id)) Update
                 span 
-                button.btn.btn-outline-danger(type="#" value="delete") Delete
+                button#delete.btn.btn-outline-danger(type="#" value=(event.id)) Delete
