Modified imageUpload routes, created Gallery and routing

--- a/views/index.pug
+++ b/views/index.pug
@@ -47,7 +47,10 @@ block content
     p 521 Obendorfer Rd Norfolk, VA
     p Call (757) 545-5527
     img(src="https://www.mapdevelopers.com/geocode_tool.php?lat=36.8293311&lng=-76.2692443")
-    a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX") Facebook
+    a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX")
+      i.fab.fa-facebook-square.fa-3x(style="color: #2E1017")
+       
+
     
 
   // Modal
