--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@ body {
   color: #D4F7D4
 }
 .parallax {
-  background-image: url(../images/StMarkBldg.jpg);
+  background-image: url(../images/StMarkBldg4.jpg);
   
   height: 500px;
   background-attachment: fixed;
