--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -14,7 +14,7 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
       li.nav-item
         a.nav-link(href='/events') Events
       li.nav-item
-        a.nav-link(href='#') Gallery
+        a.nav-link(href='/gallery') Gallery
       li.nav-item
         a.nav-link(href='/imageUploader') Load Images
       //- li.nav-item
