--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -2,7 +2,7 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
   a.navbar-brand(href='https://www.ucc.org/' target="_blank")
     img#logo(src="https://d3n8a8pro7vhmx.cloudfront.net/unitedchurchofchrist/pages/52/attachments/original/1540995080/UCC-Logo-2018-uccwebheader.png?1540995080" style='width: 300px' alt="United Church of Christ")
   button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
-    span.navbar-toggler-icon
+    span.navbar-toggler-icon &#x2630;
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav
       li.nav-item.active
@@ -17,5 +17,9 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
         a.nav-link(href='/gallery') Gallery
       li.nav-item
         a.nav-link(href='/imageUploader') Load Images
+      li.nav-item
+        a.nav-link(href='/register') Register
+      li.nav-item
+        a.nav-link(href='/login') Log In
       //- li.nav-item
       //-   a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
