Added profile and error views

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
     br
     h2 Join Us
     h5 No Matter Who You Are Or Where You Are On Life's Journey, You're Welcome HERE!!!
-    img.intro-pic(src="/images/smiling_group.jpg")
+    img.intro-pic(src="/images/smiling_group.jpg" height="50%" width="30%")
     p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque efficitur feugiat aliquet. Praesent accumsan enim sit amet nisi pellentesque, id placerat massa feugiat. Suspendisse condimentum felis ut metus consequat, at vulputate quam faucibus. Nulla eleifend convallis eros nec varius. Curabitur porta nulla dui, a hendrerit mi tincidunt quis. Duis euismod neque neque. Curabitur tempor nunc eget fermentum viverra. Donec et molestie mi, in suscipit nulla. Nulla maximus eu eros at tempor. Vestibulum tristique orci et ex ullamcorper, ac lobortis est commodo. Etiam tincidunt auctor ex sed rhoncus.Etiam posuere eu quam ac consectetur. Vivamus ut consequat nisi, in venenatis justo. Etiam vulputate rutrum hendrerit. Nullam efficitur porta mauris sit amet cursus. Nunc vestibulum varius dignissim. Fusce fringilla porta est, vel suscipit risus molestie ac. Suspendisse a augue eget ipsum auctor sodales quis sed orci. Curabitur purus sem, pretium eget nisl eu, lobortis lacinia ex. Suspendisse facilisis risus sit amet tempor viverra. Maecenas tincidunt semper suscipit. Nullam vestibulum non tortor ut consequat. Duis eu commodo diam. Donec maximus quis lacus et semper. Donec nisi lacus, placerat ut porta quis, dapibus ac nulla. Donec ornare diam sed nisl porttitor, ac convallis arcu tempor. Nunc eget nibh velit.
 
     In volutpat, quam at mollis ultricies, diam nisi rhoncus nibh, ultricies venenatis justo magna et diam. Aliquam erat volutpat. Fusce ullamcorper dictum risus, pretium facilisis metus viverra in. Pellentesque ullamcorper turpis at libero dignissim, placerat vulputate metus pellentesque. Proin mattis, arcu et euismod semper, est nulla suscipit urna, tempor tristique felis tellus eget leo. Aliquam ornare dolor enim. Fusce at tellus efficitur, pretium turpis quis, pulvinar mi. Sed sollicitudin, nulla sit amet laoreet luctus, eros odio congue ligula, et venenatis lacus velit sit amet nulla. Duis sed enim enim. Nunc ante est, egestas at dolor a, faucibus eleifend ligula. Morbi efficitur leo dolor, at sollicitudin eros laoreet quis. Mauris a consequat leo. Sed commodo turpis eu massa gravida, lobortis vulputate purus congue. Mauris et pharetra lacus. Suspendisse quis porttitor eros, eget venenatis erat. Aenean elementum nunc purus, a cursus dolor hendrerit lobortis.
@@ -43,9 +43,10 @@ block content
   #location
     br
     h2 Location
+    img(src="/images/stMarkMap.png" height="45%" width="40%")
+    br
     p 521 Obendorfer Rd Norfolk, VA
     p Call (757) 545-5527
-    img(src="https://www.mapdevelopers.com/geocode_tool.php?lat=36.8293311&lng=-76.2692443")
     a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX")
       i.fab.fa-facebook-square.fa-3x(style="color: #2E1017")
        
@@ -64,4 +65,4 @@ block content
           //- | ... #{event.description}
         .modal-footer
           button.btn.btn-secondary(type="button" data-dismiss="modal") Close
-          button.btn.btn-primary(type="button") Save changes
+          //- button.btn.btn-primary(type="button") Save changes
