--- a/views/profile.pug
+++ b/views/profile.pug
@@ -7,4 +7,5 @@ block content
         h1.display-4
           img.avatar.img-circle.hidden-xs-down(src='/images/avatar.png', alt='avatar')
           | #{name}
+        p Welcome #{name}! You may now access the image loader and events pages.
         
