Added ID to event table for refresh function

--- a/views/eventForm.pug
+++ b/views/eventForm.pug
@@ -29,7 +29,7 @@ block content
     #activitiesTable
       if {events}
         h2 Saved Events
-        table
+        table#newEvents
           tr
             th Date
             th Start Time
