Added logout view and navbar link

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -21,5 +21,7 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
         a.nav-link(href='/register') Register
       li.nav-item
         a.nav-link(href='/login') Log In
+      li.nav-item
+        a.nav-link(href='/logout') Log Out
       //- li.nav-item
       //-   a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
