--- a/views/profile.pug
+++ b/views/profile.pug
@@ -6,6 +6,6 @@ block content
       .col-md-8.col-md-offset-2
         h1.display-4
           img.avatar.img-circle.hidden-xs-down(src='/images/avatar.png', alt='avatar')
-          | #{name}
+        h1= name
         p Welcome #{name}! You may now access the image loader and events pages.
         
