--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,8 @@ html
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     title= title
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+    //-lightbox2 css file for image gallery
+    link(rel='stylesheet', href='/stylesheets/lightbox.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
 
  
@@ -21,6 +23,8 @@ html
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
     //- font awesome
     script(src="https://kit.fontawesome.com/5f901e4b7a.js" crossorigin="anonymous")
+    //-lightbox2 js file for image gallery
+    script(src="/javascripts/lightbox-plus-jquery.min.js")
     script(src="/javascripts/mainpage.js")
     
     
