--- a/views/imageUpload.pug
+++ b/views/imageUpload.pug
@@ -10,7 +10,8 @@ block content
                     label.custom-file-label(for="file")
                     br
                     //- img#myImg(src="#" alt="your image" height="250" width="250")
-                    #previewGallery(style="opacity: 0")
+                    .row
+                        #previewGallery(style="opacity: 0").col-sm-12
                         //- img.myImg-0(src="#" alt="your image" height="250" width="250" value="0" style="opacity: 0")
                         //- img.myImg-1(src="#" alt="your image" height="250" width="250" value="1" style="opacity: 0")
                         //- img.myImg-2(src="#" alt="your image" height="250" width="250" value="2" style="opacity: 0")
@@ -23,7 +24,8 @@ block content
                         //- img.myImg-9(src="#" alt="your image" height="250" width="250" value="9" style="opacity: 0")
                         //- img.myImg-10(src="#" alt="your image" height="250" width="250" value="10" style="opacity: 0")
                         //- img.myImg-11(src="#" alt="your image" height="250" width="250" value="11" style="opacity: 0")
-                    div#imageButton
+                    .row    
+                        #imageButton.col-sm-12
 
 
 
