--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -3,8 +3,8 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
     img#logo(src="https://d3n8a8pro7vhmx.cloudfront.net/unitedchurchofchrist/pages/52/attachments/original/1540995080/UCC-Logo-2018-uccwebheader.png?1540995080" style='width: 300px' alt="United Church of Christ")
   button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
     span.navbar-toggler-icon &#x2630;
-  #navbarNav.collapse.navbar-collapse
-    ul.navbar-nav
+  #navbarNav.collapse.navbar-collapse.justify-content-end
+    ul.navbar-nav.justify-content-end
       li.nav-item.active
         a.nav-link(href='/')
           | Home
@@ -25,5 +25,6 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
           a.nav-link(href='/imageUploader') Load Images
         li.nav-item
           a.nav-link(href='/logout') Log Out
+      a.btn.btn-warning(href='https://app.easytithe.com/app/giving/' target="_blank") Give
       //- li.nav-item
       //-   a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
