--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -14,4 +14,5 @@ block content
                       if currentUser
                         .row
                           .col-sm-12   
-                            button.btn.btn-danger(type="button") Delete 
+                            button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
+                              i.fas.fa-trash-alt 
