Added new staff view

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -10,7 +10,7 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
           | Home
           span.sr-only (current)
       li.nav-item
-        a.nav-link(href='#') About Us
+        a.nav-link(href='/staff') About Us
       li.nav-item
         a.nav-link(href='/gallery') Gallery
       if !currentUser
