--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,6 +69,35 @@ body {
   right:0;
   left:0; */
 }
+.staffDescription {
+  /* background-color:#D9E5F2; */
+  height: 300px;
+  /* background-size: cover; */
+  background-repeat: no-repeat;
+  background-position: center; 
+  background-attachment: local;
+  text-align: left;
+  color: #2E1017;
+  position: relative;
+  overflow: hidden;
+  margin-top: 20px;
+  /* top:0;
+  bottom:0;
+  right:0;
+  left:0; */
+}
+.staffPhotoDiv {
+  justify-content: center;
+}
+
+.role-description {
+  justify-content: left;
+}
+.staff-pic{
+  float: right;
+  margin-left: 15px;
+  box-shadow:  10px 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
+}
 .intro-pic{
   float: left;
   margin-left: 15px;
