--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,6 +98,11 @@ body {
   margin-left: 15px;
   box-shadow:  10px 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
 }
+
+.staffTitle {
+  color: #2E1017;
+}
+
 .intro-pic{
   float: left;
   margin-left: 15px;
