Changed ID for event submit button.

--- a/views/eventForm.pug
+++ b/views/eventForm.pug
@@ -23,7 +23,7 @@ block content
           label(for='description') Description:
           input#description.form-control(type='text' name='description')
         div#action-button
-          button.btn.btn-primary#submit(type='submit') Submit
+          button.btn.btn-primary#eventSubmit(type='submit') Submit
 
   #activities
     #activitiesTable
