--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -25,6 +25,6 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
           a.nav-link(href='/imageUploader') Load Images
         li.nav-item
           a.nav-link(href='/logout') Log Out
-      a.btn.btn-warning(href='https://app.easytithe.com/app/giving/' target="_blank") Give
+      a.btn.btn-warning(href='https://app.easytithe.com/app/giving/stmarkuccberkley' target="_blank") Give
       //- li.nav-item
       //-   a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
