Added text to Pastor view.

--- a/views/pastor.pug
+++ b/views/pastor.pug
@@ -14,8 +14,8 @@ block content
 
     .col-md-5.role-description
       h2.staffTitle Pastor
-      h3.staffName Rev. Linda DT Clark, PhD.
-      p Insert Bio Here         
+      h3.staffName Rev. Dr. Linda D.T. Clark
+      p Rev. Dr. Linda Clark has served as the Interim Pastor of St. Mark United Church since July, 2020.  Pastor Clark is a daughter of St. Mark UCC and feelshonored to stand in the gap and serve her home church during this time of transition.  Pastor Clark has been married to Robert A. Clark, Jr. for over fortyyears.  Together they have two adult daughters, four grandchildren and two sons-in-law. Pastor Clark holds a Bachelor’s degree in sociology; a Master of  Social Work;a Master of Divinity and a Doctor of Ministry degree.  She was the former Senior Pastor of Union United Church of Christ in Norfolk, Virginia for thirteenand a half years.  Pastor Clark is a Licensed Clinical Social Worker and also works part time at Tidewater Pastoral Counseling Services as a psychotherapist.  Her clear call from God is to “feed my sheep.”  She has purposed to do this both through her call to the pastoral ministry and to her call as a pastoral counselor.         
 
     
   #location
