--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -9,10 +9,10 @@ block content
                li 
                  .row
                     .col-sm-12
-                      a(href=(gallery.imageURL) data-lightbox="gallery-set")
-                        img(src=(gallery.imageURL) height="250" width="250")
+                      a(href=(`https://stmarkfiles7.s3.amazonaws.com/${gallery.Key}`) data-lightbox="gallery-set")
+                        img(src=(`https://stmarkfiles7.s3.amazonaws.com/${gallery.Key}`) height="250" width="250")
                       if currentUser
                         .row
                           .col-sm-12   
-                            button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
-                              i.fas.fa-trash-alt 
+                            //- button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
+                            //-   i.fas.fa-trash-alt 
