--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -9,9 +9,10 @@ block content
                li 
                  .row
                     .col-sm-12
-                      a(href=((gallery.key)) data-lightbox="gallery-set")
-                        img(src=((gallery.key)) height="250" width="250")
-                        //- img(src=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.key)}`) height="250" width="250")
+                      a(href=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.imageURL)}`) data-lightbox="gallery-set")
+                        img(src=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.imageURL)}`) height="250" width="250")
+                      //- a(href=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.key)}`) height="250" width="250") data-lightbox="gallery-set")
+                        //- img(src=((gallery.imageURL)) height="250" width="250")
                       if currentUser
                         .row
                           .col-sm-12   
