Gallery view ln 19: reinstated imageDelete button

--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -16,5 +16,5 @@ block content
                       if currentUser
                         .row
                           .col-sm-12   
-                            //- button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
-                            //-   i.fas.fa-trash-alt 
+                            button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
+                              i.fas.fa-trash-alt 
