--- a/views/index.pug
+++ b/views/index.pug
@@ -42,10 +42,11 @@ block content
   #location
     br
     h2 Location
-    img(src="/images/stMarkMap.png" height="45%" width="40%")
+    iframe(src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3193.595511847016!2d-76.2754339!3d36.8282115!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89baa2b20d150519%3A0xfefbb5185b236e03!2s521%20Obendorfer%20Rd%2C%20Norfolk%2C%20VA%2023523!5e0!3m2!1sen!2sus!4v1607902613925!5m2!1sen!2sus" width="45%" height="40%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0")
     br
-    p 521 Obendorfer Rd Norfolk, VA
-    p Call (757) 545-5527
+    br
+    h5 521 Obendorfer Rd Norfolk, VA
+    h5 (757) 545-5527
     a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX")
       i.fab.fa-facebook-square.fa-3x(style="color: #2E1017")
        
