--- a/views/eventForm.pug
+++ b/views/eventForm.pug
@@ -47,3 +47,9 @@ block content
                 button#edit.btn.btn-outline-primary(type="#" value= (event.id)) Update
                 span 
                 button#delete.btn.btn-outline-danger(type="#" value=(event.id)) Delete
+  script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
+  script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
+  //- font awesome
+  script(src="https://kit.fontawesome.com/5f901e4b7a.js" crossorigin="anonymous")
+  script(src="/javascripts/eventView.js")
