--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -18,3 +18,11 @@ block content
                           .col-sm-12   
                             button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
                               i.fas.fa-trash-alt 
+      script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
+      script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
+      script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
+      //-lightbox2 js file for image gallery
+      script(src="/javascripts/lightbox-plus-jquery.min.js")
+      //- font awesome
+      script(src="https://kit.fontawesome.com/5f901e4b7a.js" crossorigin="anonymous")
+      script(src="/javascripts/imageGalleryView.js")
