--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -11,13 +11,14 @@ block content
                     .col-sm-12
                       a(href=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.imageURL)}`) data-lightbox="gallery-set")
                         img(src=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.imageURL)}`) height="250" width="250")
-                      //- a(href=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.key)}`) height="250" width="250") data-lightbox="gallery-set")
-                        //- img(src=((gallery.imageURL)) height="250" width="250")
+
+                      //- Add button to allow registered users to delete images
                       if currentUser
                         .row
                           .col-sm-12   
                             button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
                               i.fas.fa-trash-alt 
+                              
       script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
       script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
       script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
