Revised text in pastor bio.

--- a/views/pastor.pug
+++ b/views/pastor.pug
@@ -10,12 +10,12 @@ block content
   .row.staffDescription
     .col-md-3.offset-md-2.staffPhotoDiv
       br
-      img.staff-pic(src="/images/avatar.png" height="200" width="180")
+      img.staff-pic(src="/images/pastor.webp" height="200" width="180")
 
     .col-md-5.role-description
-      h2.staffTitle Pastor
-      h3.staffName Rev. Dr. Linda D.T. Clark
-      p Rev. Dr. Linda Clark has served as the Interim Pastor of St. Mark United Church since July, 2020.  Pastor Clark is a daughter of St. Mark UCC and feelshonored to stand in the gap and serve her home church during this time of transition.  Pastor Clark has been married to Robert A. Clark, Jr. for over fortyyears.  Together they have two adult daughters, four grandchildren and two sons-in-law. Pastor Clark holds a Bachelor’s degree in sociology; a Master of  Social Work;a Master of Divinity and a Doctor of Ministry degree.  She was the former Senior Pastor of Union United Church of Christ in Norfolk, Virginia for thirteenand a half years.  Pastor Clark is a Licensed Clinical Social Worker and also works part time at Tidewater Pastoral Counseling Services as a psychotherapist.  Her clear call from God is to “feed my sheep.”  She has purposed to do this both through her call to the pastoral ministry and to her call as a pastoral counselor.         
+      h1.staffTitle Pastor
+      h3.staffName Rev. Dr. Linda D.T. Clark, LCSW
+      h6 Rev. Dr. Linda Clark has served as the Interim Pastor of St. Mark United Church since July, 2020.  Pastor Clark is a daughter of St. Mark UCC and feels honored to stand in the gap and serve her home church during this time of transition.  Pastor Clark has been married to Robert A. Clark, Jr. for over forty years.  Together they have two adult daughters, four grandchildren and two sons-in-law. Pastor Clark holds a Bachelor’s degree in sociology; a Master of  Social Work;a Master of Divinity and a Doctor of Ministry degree.  She was the former Senior Pastor of Union United Church of Christ in Norfolk, Virginia for thirteen and a half years.  Pastor Clark has worked over 30 years as a  psychotherapist.  Her clear call from God is to “feed my sheep.”  She has purposed to do this both through her call to the pastoral ministry and as a psychotherapist.         
 
     
   #location
@@ -25,6 +25,7 @@ block content
     br
     h5 521 Obendorfer Rd Norfolk, VA
     h5 (757) 545-5527
+    h5 stmarkuccnorfolk@gmail.com
     a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX")
       i.fab.fa-facebook-square.fa-3x(style="color: #2E1017")
        
