Created ministries and mission views

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -12,6 +12,10 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
       li.nav-item
         a.nav-link(href='/pastor') Meet the Pastor
       li.nav-item
+        a.nav-link(href='/mission') Mission
+      li.nav-item
+        a.nav-link(href='/ministries') Ministries
+      li.nav-item
         a.nav-link(href='/gallery') Gallery
       if !currentUser
           li.nav-item
